all Makefiles: allow 'make install' from topdir
Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -38,7 +38,7 @@ all modules:
 install modules_install:
 	$(MAKE) -C $(LINUX) M=$(shell /bin/pwd) modules_install
 
-
+# be able to run the "clean" rule even if $(LINUX) is not valid
 clean:
 	rm -rf *.o *~  .*.cmd *.ko *.mod.c .tmp_versions Module.symvers \
 		Module.markers modules.order
