--- a/doc/spec-sw.in
+++ b/doc/spec-sw.in
@@ -1262,6 +1262,32 @@ be made safer.
 @end itemize
 
 @c ##########################################################################
+@node Portability
+@chapter Portability
+
+This package should be portable. However I didn't test it on a wide
+variety of systems.  I used the core @code{spec.ko} on a 32-bit x86
+host, running version 2.6.32 and 3.4 of the kernel.
+
+The complete package compiles without any warning from version 2.6.37
+up to 3.5 (I didn't try later versions, yet).  Frame timestamping
+changed seriously after 2.6.36, so the @code{wr-nic.ko} driver is not
+easily backward portable.
+
+To allow use of the core @i{spec} driver, to drive custom mezzanines,
+the @i{Makefile} supports the configuration variable
+@code{CONFIG_WR_NIC}, which you may set to @code{n} before compiling:
+
+@smallexample
+   export CONFIG_WR_NIC=n
+@end smallexample
+
+With this in place, the package compiles without any warning on a
+32-bit PC from version 2.6.30 onwards, and I tested up to 3.5.
+If you remove MSI code, you can compile back to version 2.6.27; earlier
+than that, the backporting effort increases seriously.
+
+@c ##########################################################################
 @bye
 
 
